<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>cesur.zakaria</groupId>
  <artifactId>PokemonProjectZakariaFarih</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>PokemonProjectZakariaFarih</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
<junit.version>5.10.0</junit.version>  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>21</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-crypto</artifactId>
      <version>6.2.2</version> <!-- Use the latest version -->
    </dependency>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.2</version> <!-- Check for the latest version -->
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>21</version>
    </dependency>
    <dependency>
      <groupId>uk.co.caprica</groupId>
      <artifactId>vlcj</artifactId>
      <version>4.8.2</version>
    </dependency>
    <dependency>
      <groupId>com.github.weisj</groupId>
      <artifactId>jsvg</artifactId>
      <version>1.2.0</version> <!-- Check for the latest version -->
    </dependency>

    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf-fonts-roboto</artifactId>
      <version>2.137</version>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.33</version>
    </dependency>

<dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>local</groupId>
      <artifactId>swing-glasspane-popup</artifactId>
      <version>1.4.0</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/src/libs/swing-glasspane-popup-1.4.0.jar</systemPath>
    </dependency>
    <dependency>
      <groupId>local</groupId>
      <artifactId>swing-toast-notifications</artifactId>
      <version>1.0.0</version> <!-- Adjust version as necessary -->
      <scope>system</scope>
      <systemPath>${project.basedir}/src/libs/swing-toast-notifications-1.0.1.jar</systemPath> <!-- Adjust filename as necessary -->
    </dependency>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>3.2.5</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf-extras</artifactId>
      <version>3.2.5</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>2.12.2</version>
    </dependency>
    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>8.3.0</version>
    </dependency>
      <dependency>
          <groupId>com.oracle.database.jdbc</groupId>
          <artifactId>ojdbc10</artifactId>
          <version>19.21.0.0</version>
      </dependency>

    <dependency>
      <groupId>com.github.oscar0812</groupId>
      <artifactId>pokeapi</artifactId>
      <version>2.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>3.34.0</version>
    </dependency>
      <dependency>
          <groupId>com.miglayout</groupId>
          <artifactId>miglayout-swing</artifactId>
          <version>11.3</version>
      </dependency>
      <dependency>
          <groupId>com.formdev</groupId>
          <artifactId>flatlaf</artifactId>
          <version>3.2.1</version>
      </dependency>
      <dependency>
          <groupId>com.formdev</groupId>
          <artifactId>flatlaf-extras</artifactId>
          <version>3.2.1</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
          <version>2.15.3</version>
      </dependency>
      <dependency>
          <groupId>com.vaadin.external.google</groupId>
          <artifactId>android-json</artifactId>
          <version>0.0.20131108.vaadin1</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/com.badlogicgames.gdx/gdx -->
      <dependency>
          <groupId>com.badlogicgames.gdx</groupId>
          <artifactId>gdx</artifactId>
          <version>1.12.1</version>
      </dependency>
      <dependency>
          <groupId>com.badlogicgames.gdx</groupId>
          <artifactId>gdx-backend-lwjgl</artifactId>
          <version>1.12.1</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/com.badlogicgames.gdx/gdx-platform -->
      <dependency>
          <groupId>com.badlogicgames.gdx</groupId>
          <artifactId>gdx-platform</artifactId>
          <version>1.12.1</version>
          <classifier>natives-desktop</classifier>
      </dependency>
      <dependency>
          <groupId>com.badlogicgames.gdx</groupId>
          <artifactId>gdx-box2d</artifactId>
          <version>1.12.1</version>
      </dependency>


  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>21</source>
          <target>21</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <executions>
          <execution>
            <!-- Default configuration for running with: mvn clean javafx:run -->
            <id>default-cli</id>
            <configuration>
              <mainClass>cesur.zakaria.pokemonprojectzakariafarih.main.Main</mainClass>
              <launcher>app</launcher>
              <jlinkZipName>app</jlinkZipName>
              <jlinkImageName>app</jlinkImageName>
              <noManPages>true</noManPages>
              <stripDebug>true</stripDebug>
              <noHeaderFiles>true</noHeaderFiles>
            </configuration>
          </execution>
        </executions>
      </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>3.1.2</version>
            <executions>
                <execution>
                    <id>unpack</id>
                    <phase>prepare-package</phase>
                    <goals>
                        <goal>unpack-dependencies</goal>
                    </goals>
                    <configuration>
                        <includeGroupIds>com.badlogicgames.gdx</includeGroupIds>
                        <includeArtifactIds>gdx-platform</includeArtifactIds>
                        <classifier>natives-desktop</classifier>
                        <outputDirectory>${project.build.directory}/natives</outputDirectory>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
  </build>
</project>